@@ -1,5 +1,10 @@
 2005-08-25  Sam Steingold  <sds@gnu.org>
 
+	* modules/berkeley-db/bdb.c (close_messages, DBE-MESSAGES):
+	added casts for C++ compilation
+
+2005-08-25  Sam Steingold  <sds@gnu.org>
+
 	* makemake.in: instead of having the user edit Makefile and select
 	the packer, check for gzip/compress and assume that tar is present
 	* configure.in: check for gzip/compress
